clearfix - float elements, removing float property and handling parent layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,25 @@
+/* Floating elements - allows other elements to wrap around */
 .avatar {
     width: 5rem;
     height: 5rem;
     background-color: gold;
     float: left; 
     margin-right: 0.5rem;
+}
+
+/* Floating elements - by default are ignored by parent elements */
+.tweet {
+    border: 3px solid lightgrey; 
+}
+
+/* Solves floating elements ignored by parent containers*/
+.clearfix::after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+/* clear - removes float properties for other elements in container  */
+.clear {
+    clear: both;
 }
